--- a/src/pages/reward-confirmation/reward-confirmation.css
+++ b/src/pages/reward-confirmation/reward-confirmation.css
@@ -12,7 +12,7 @@
 .reward-confirmation .card {
   background-color: #2b4b62;
   background-color: #2b4b62;
-  background-image: url("../../assets/imgs/bg1.png");
+  background-image: url("../../assets/imgs/rewards_background.jpg");
   background-size: 70% auto;
   background-position: bottom -45px right -40px;
   background-repeat: no-repeat;
