--- a/src/pages/order-confirmation/order-confirmation.css
+++ b/src/pages/order-confirmation/order-confirmation.css
@@ -36,11 +36,10 @@ h6.white {
 }
 .order-confirmation .card {
   background-color: #2b4b62;
-  background-color: #2b4b62;
   background-image: url("../../assets/imgs/rewards_background.jpg");
-  background-size: 70% auto;
-  background-position: bottom -45px right -40px;
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
 
 }
 
@@ -78,7 +77,7 @@ h6.white {
     flex-basis: 100%;
   }
   .order-confirmation .card.next-order {
-    background-image: none !important;
+    /* background-image: none !important; */
     max-height: 435px;
     min-height: 660px;
   }
