--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -39,7 +39,7 @@
   width: 100%;
   text-align: center;
   color: white;
-  font-family: 'sunbornsans_one' !important;
+  font-family: 'Libre Franklin' !important;
 }
 .order .right-col .MuiSelect-icon {
   color: white;
@@ -47,7 +47,7 @@
 .order .right-col #select-more-times.Mui-focused,
 .order .right-col #select-more-times.MuiFormLabel-filled {
   width: auto;
-  font-family: 'sunbornsans_one' !important;
+  font-family: 'Libre Franklin' !important;
   padding: 14px 14px 14px 0px;
   color: white !important;
   font-size: 12px;
