--- a/src/components/cart/upsells/upsells.css
+++ b/src/components/cart/upsells/upsells.css
@@ -17,6 +17,7 @@
 }
 .upsells-details .quantity-label {
   padding-right: 10px;
+  font-family: "Libre Franklin" !important;
 }
 .upsells-details .quantity input {
   text-align: center;
@@ -82,4 +83,5 @@
   padding: 5px;
   text-overflow: ellipsis;
   margin-top: 5px;
+  font-family: 'Libre Franklin' !important;
 }
