--- a/src/components/password/index.css
+++ b/src/components/password/index.css
@@ -30,7 +30,7 @@
 }
 .body-text {
   font-size: 15px;
-  font-family: 'grit_sansbold' !important;
+  font-family: 'Libre Franklin' !important;
   color: #414141;
   padding-top: 8px;
 }
