--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -302,7 +302,7 @@
   .content-panel-desc
   .expire {
   font-size: 11px;
-  color: #333;
+  color: #062C43;
   font-family: 'sunbornsans_one' !important;
   display: block;
   padding: 3px 0px 5px 0px;
@@ -312,11 +312,11 @@
   .content-panel
   .content-panel-desc
   .points {
-  font-size: 11px;
+  font-size: 10px;
   padding-top: 2px;
   margin-bottom: 2px;
   color: #333;
-  font-family: 'Libre Franklin' !important;
+  font-family: 'libre_franklinlight' !important;
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -324,10 +324,11 @@
   margin: 0;
   line-height: 20px;
   text-transform: uppercase;
-  font-family: 'Libre Franklin' !important;
+  font-family: 'libre_franklinlight' !important;
   color: #0075bf;
-  font-size: 15px;
+  font-size: 11px;
   font-weight: bold;
+  letter-spacing: 0.0138em !important;
   cursor: pointer;
 }
 #reward-points-container .reward-point-merge-panel .button.disable {
@@ -447,8 +448,8 @@
     .content-panel-desc
     .expire {
     font-size: 11px;
-    color: #333;
-    font-family: 'grit_sansbold' !important;
+    color: #062C43;
+    font-family: 'sunbornsans_one' !important;
     display: block;
     padding: 3px 0px 0px 0px;
   }
@@ -462,7 +463,7 @@
     padding-top: 2px;
     margin-bottom: 0px;
     color: #333;
-    font-family: 'grit_sansbold' !important;
+    font-family: 'libre_franklinlight' !important;
     text-transform: uppercase;
   }
   .points.mobile-p {
