--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -243,7 +243,7 @@ input[type='check']:checked+label {
   width: 100%;
   box-sizing: border-box;
   border-radius: 10px;
-  font-family: 'grit_sansbold' !important;
+  font-family: 'Libre Franklin' !important;
   font-size: 12px;
   color: #2b4b62;
 }
