--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -33,7 +33,7 @@
 .body-text
 {
   font-size: 15px;
-  font-family: 'grit_sansbold' !important;
+  font-family: 'Libre Franklin' !important;
   color: #414141;
   padding-top: 8px;
 }
