--- a/src/pages/reward-new/index.css
+++ b/src/pages/reward-new/index.css
@@ -125,7 +125,7 @@
   .content-panel-desc
   .expire {
   font-size: 11px;
-  color: #333;
+  color: #062C43;
   font-family: 'sunbornsans_one' !important;
   display: block;
   padding: 3px 0px 5px 0px;
@@ -135,11 +135,11 @@
   .content-panel
   .content-panel-desc
   .points {
-  font-size: 11px;
+  font-size: 10px;
   padding-top: 2px;
   margin-bottom: 2px;
   color: #333;
-  font-family: 'sunbornsans_one' !important;
+  font-family: 'Libre Franklin' !important;
   text-transform: uppercase;
 }
 #reward-points-container .reward-point-merge-panel .button {
@@ -148,7 +148,7 @@
   text-transform: uppercase;
   font-family: 'Libre Franklin' !important;
   color: #0075bf;
-  font-size: 13px;
+  font-size: 11px;
   font-weight: bold;
   cursor: pointer;
 }
