--- a/src/components/product-listing/index.css
+++ b/src/components/product-listing/index.css
@@ -7,7 +7,7 @@
   -webkit-box-orient: vertical;
 }
 .vertical-line{
-  border-left: 2px solid #58595b;
+  border-left: 2px solid #0075BF;
   height: 17px;
 }
 .fix-span {
