--- a/src/components/favorite-orders/index.css
+++ b/src/components/favorite-orders/index.css
@@ -41,8 +41,8 @@
 }
 
 .order-history-card .card-panel .order-Link {
-  font-size: 15px;
-  font-family: 'Libre Franklin' !important;
+  font-size: 13px;
+  font-family: 'libre_franklin_light' !important;
   display: block;
   color: #2e75bf;
   padding-bottom: 0px;
