--- a/src/components/recent-orders/index.css
+++ b/src/components/recent-orders/index.css
@@ -45,8 +45,8 @@
 }
 
 .order-history-card .card-panel .order-Link {
-  font-size: 15px;
-  font-family: 'Libre Franklin' !important;
+  font-size: 13px;
+  font-family: 'libre_franklinlight' !important;
   display: block;
   color: #2e75bf;
   padding-bottom: 0px;
