--- a/src/pages/reward-new/index.css
+++ b/src/pages/reward-new/index.css
@@ -146,7 +146,7 @@
   margin: 0;
   line-height: 20px;
   text-transform: uppercase;
-  font-family: 'Libre Franklin' !important;
+  font-family: 'libre_franklinlight' !important;
   color: #0075bf;
   font-size: 11px;
   font-weight: bold;
