--- a/src/components/personal-info/index.css
+++ b/src/components/personal-info/index.css
@@ -45,7 +45,7 @@
 }
 .body-text-keep {
   font-size: 15px;
-  font-family: 'grit_sansbold' !important;
+  font-family: 'Libre Franklin' !important;
   color: #414141;
   padding-top: 8px;
 }
