--- a/src/index.css
+++ b/src/index.css
@@ -515,3 +515,7 @@ font-family: 'sunbornsans_one' !important;
 .css-q2wzpm-MuiTypography-root {
   font-family: 'Libre Franklin' !important;
 }
+
+.css-1je76wn-MuiFormLabel-root-MuiInputLabel-root {
+  font-family: 'Libre Franklin' !important;
+}
