--- a/src/components/location/delivery/index.css
+++ b/src/components/location/delivery/index.css
@@ -3,7 +3,7 @@
   font-size: 11px;
   display: block;
   color: #414141;
-  font-family: 'Sunborn_Sansone'!important;
+  font-family: 'Sunborn-Sansone'!important;
   letter-spacing: 0.5px;
 }
 
