--- a/src/components/location/location.css
+++ b/src/components/location/location.css
@@ -52,7 +52,7 @@
 }
 
 .location-sidebar .name span {
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   color: #414141;
   font-size: 18px;
   padding: 0px;
