--- a/src/components/password/index.css
+++ b/src/components/password/index.css
@@ -22,7 +22,7 @@
   text-align: left;
 }
 .bday-text {
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   padding-right: 10px;
 }
 .birthday-button span {
