--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -38,7 +38,7 @@
 }
 .sign-up-section .fav-error-message {
   padding: 0;
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   font-weight: 400;
   font-size: 0.75rem;
   line-height: 1.66;
