--- a/src/pages/forgot-password/forgot.css
+++ b/src/pages/forgot-password/forgot.css
@@ -51,7 +51,7 @@
   display: block;
 }
 .login-content .label.bold {
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   font-size: 15px !important;
   margin-top: 0px;
   text-align: center;
