--- a/src/pages/iframe/stay-current/stay-current.css
+++ b/src/pages/iframe/stay-current/stay-current.css
@@ -58,7 +58,7 @@
   background: #0a6fb8;
   padding-top: 16px;
   padding-bottom: 15px;
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   font-weight: 700;
   width: 80px;
 
