--- a/src/pages/login2/login2.css
+++ b/src/pages/login2/login2.css
@@ -48,7 +48,7 @@
   margin: 14px 0px 15px 0px;
 }
 .login-content .label.bold {
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   font-size: 15px !important;
   margin-top: 0px;
   text-align: center;
