--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -59,7 +59,7 @@ margin-bottom: 20px;
 }
 
 .product-detail .single-product .custom-btn {
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   float: right;
   font-size: 13px;
   color: #1781c4;
