--- a/src/pages/reward-new/index.css
+++ b/src/pages/reward-new/index.css
@@ -126,7 +126,7 @@
   .expire {
   font-size: 11px;
   color: #062C43;
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   display: block;
   padding: 3px 0px 5px 0px;
 }
@@ -180,7 +180,7 @@
 }
 #reward-points-container .message-panel .low-head {
   font-size: 18px;
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   text-transform: uppercase;
   color: #2b4b62;
   margin: 15px 0px 5px 0;
