--- a/src/pages/reward/redeem-reward.css
+++ b/src/pages/reward/redeem-reward.css
@@ -8,7 +8,7 @@
 }
 .redeem-sec .body-text-bold {
   font-size: 16px !important;
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   color: #414141;
   padding-top: 8px;
   line-height: 32px;
