--- a/src/pages/welcome/welcome.css
+++ b/src/pages/welcome/welcome.css
@@ -72,12 +72,12 @@
 }
 
 .welcome-content .order-action .caption-grey {
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   color: #a4a4a4;
 }
 
 .welcome-content .order-action .button {
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   font-size: 13px !important;
 }
 
