--- a/src/components/personal-info/index.css
+++ b/src/components/personal-info/index.css
@@ -26,7 +26,7 @@
   font-size: 16px !important;
 }
 .bday-text {
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   position: absolute;
   top: 5px;
   font-size: 7.5px !important;
@@ -55,7 +55,7 @@
 
 .fav-Profile-error-message {
   padding: 0;
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   font-weight: 400;
   font-size: 0.75rem;
   line-height: 1.66;
