--- a/src/pages/order-confirmation/order-confirmation.css
+++ b/src/pages/order-confirmation/order-confirmation.css
@@ -142,7 +142,7 @@ h6.white {
 }
 
 .order-details h2{
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   color: #062C43;
   font-size: 36px !important;
 }
