--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -23,7 +23,7 @@
   text-align: left;
 }
 .profile-section .bday-text{
-  font-family: 'Sunborn_Sansone' !important;
+  font-family: 'Sunborn-Sansone' !important;
   padding-right: 10px;
   letter-spacing: 0px !important;
 }
