--- a/src/components/favorite-orders/index.css
+++ b/src/components/favorite-orders/index.css
@@ -17,7 +17,7 @@
 
 .order-history-card .card-panel .order-name {
   font-size: 20px;
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   display: block;
   color: #414141;
   font-weight: bold;
