--- a/src/pages/forgot-password/forgot.css
+++ b/src/pages/forgot-password/forgot.css
@@ -63,7 +63,7 @@
 .login-content .caption-grey {
   font-size: 12px;
   text-decoration: none;
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   margin-left: 5px;
 }
 
