--- a/src/pages/welcome/welcome.css
+++ b/src/pages/welcome/welcome.css
@@ -1,5 +1,5 @@
 .welcome-wrapper {
-  margin: 62px 139px !important;
+  margin: 62px 139px 139px 139px !important;
 }
 
 .welcome-wrapper .welcome-content {
@@ -130,7 +130,7 @@
 .welcome-content .caption-grey {
   font-size: 12px;
   text-decoration: none;
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   margin-left: 5px;
 }
 
