--- a/src/components/forgot-form/index.css
+++ b/src/components/forgot-form/index.css
@@ -19,7 +19,7 @@
 .sign-in-section .forgot-pass {
   font-size: 12px;
   color: #2b4b62;
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   text-decoration: none;
   cursor: 'pointer';
 }
