--- a/src/components/location/location.css
+++ b/src/components/location/location.css
@@ -3,7 +3,7 @@
 }
 .location-sidebar .MuiOutlinedInput-input,
 .location-sidebar .MuiInputLabel {
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   font-size: 16px;
 }
 .MuiInputLabel.Mui-focused {
