--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -162,7 +162,7 @@
   border-radius: 0px;
   border: 1px solid #c6c6c6;
   box-shadow: 0px 4px 5px 0px rgb(0 0 0 / 20%);
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   text-align: center;
   width: 100%;
   max-width: 460px;
@@ -180,7 +180,7 @@
   margin: 20px 0 25px 0;
 }
 #reward-points-container .bold-title {
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   font-size: 30px;
   text-transform: uppercase;
   font-weight: bold;
@@ -213,7 +213,7 @@
   border-radius: 0px;
   border: 1px solid #c6c6c6;
   box-shadow: 0px 4px 5px 0px rgb(0 0 0 / 20%);
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   text-align: center;
   color: #2b4b62;
   padding: 10px;
@@ -347,7 +347,7 @@
 }
 #reward-points-container .message-panel {
   padding: 0px 0 5px 0;
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   font-size: 15px;
   color: #333;
 }
