--- a/src/components/sign-up-guest/index.css
+++ b/src/components/sign-up-guest/index.css
@@ -16,7 +16,7 @@
 
 .fav-error-message {
   padding: 0;
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   font-weight: 400;
   font-size: 0.75rem;
   line-height: 1.66;
@@ -31,7 +31,7 @@
 
 .body-text-signup {
     font-size: 12px;
-font-family: 'Librefranklin-Light' !important;
+font-family: 'Librefranklin-Regular' !important;
     color: #414141;
     padding-top: 3px;
   }
