--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -27,7 +27,7 @@ margin-bottom: 20px;
 }
 
 .product-detail .label.bold {
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   font-size: 16px !important;
   text-transform: capitalize !important;
   line-height: 1.2;
@@ -37,13 +37,13 @@ margin-bottom: 20px;
 .product-detail .desc {
   margin-bottom: 25px;
   color: #062C43;
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   font-size: 16px !important;
   white-space: pre-line;
 }
 
 .product-detail .price {
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   margin-bottom: 25px;
   color: #0075BF;
   font-weight: bold;
@@ -133,7 +133,7 @@ input[type='check']:checked+label {
 }
 
 .product-detail .quantity button {
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   font-size: 30px;
   color: #414141;
 }
@@ -243,7 +243,7 @@ input[type='check']:checked+label {
   width: 100%;
   box-sizing: border-box;
   border-radius: 10px;
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   font-size: 12px;
   color: #2b4b62;
 }
@@ -392,7 +392,7 @@ input[type='check']:checked+label {
     border-top: none;
     border-bottom: none;
     font-size: 15px;
-    font-family: 'Librefranklin-Light' !important;
+    font-family: 'Librefranklin-Regular' !important;
     font-weight: bold;
 }
   .quantity-label {
@@ -450,7 +450,7 @@ input[type='check']:checked+label {
 .product-detail .menu-items .content-panel {
   padding: 10px 20px 10px 0px;
   cursor: pointer;
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   color: #2b4b62;
   /* max-width: 354px; */
   min-height: 140px;
@@ -578,6 +578,6 @@ input[type='check']:checked+label {
   border-top: none;
   border-bottom: none;
   font-size: 15px;
-  font-family: 'Librefranklin-Light' !important;
+  font-family: 'Librefranklin-Regular' !important;
   font-weight: bold;
 }
