--- a/src/components/favorite-orders/index.css
+++ b/src/components/favorite-orders/index.css
@@ -42,7 +42,7 @@
 
 .order-history-card .card-panel .order-Link {
   font-size: 13px;
-  font-family: 'libre_franklin_light' !important;
+  font-family: 'Librefranklin-Bold' !important;
   display: block;
   color: #2e75bf;
   padding-bottom: 0px;
