--- a/src/components/credit-cards/index.css
+++ b/src/components/credit-cards/index.css
@@ -43,7 +43,7 @@
   font-size: 13px;
   display: block;
   color: #b9b9b9;
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Librefranklin-Bold' !important;
   height: auto;
   padding: 0;
   letter-spacing: 0.2px !important;
