--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,7 @@
 }
 
 .libre-franklinlight {
-  font-family: 'Librefranklin-Regular' !important;
+  font-family: 'Librefranklin-Light' !important;
 }
 .libre-franklin {
   font-family: 'Librefranklin-Regular' !important;
