--- a/src/pages/delivery-address/index.css
+++ b/src/pages/delivery-address/index.css
@@ -40,7 +40,7 @@
 
 .delivery-address-container .card-panel .small-button-panel .link {
   padding-left: 20px;
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Librefranklin-Bold' !important;
   color: #b9b9b9;
   font-size: 13px;
   font-weight: bold;
