--- a/src/components/recent-orders/index.css
+++ b/src/components/recent-orders/index.css
@@ -46,7 +46,7 @@
 
 .order-history-card .card-panel .order-Link {
   font-size: 13px;
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Librefranklin-Bold' !important;
   display: block;
   color: #2e75bf;
   padding-bottom: 0px;
