--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -316,7 +316,7 @@
   padding-top: 2px;
   margin-bottom: 2px;
   color: #333;
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Librefranklin-Bold' !important;
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -324,7 +324,7 @@
   margin: 0;
   line-height: 20px;
   text-transform: uppercase;
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Librefranklin-Bold' !important;
   color: #0075bf;
   font-size: 11px;
   font-weight: bold;
@@ -463,7 +463,7 @@
     padding-top: 2px;
     margin-bottom: 0px;
     color: #333;
-    font-family: 'libre_franklinlight' !important;
+    font-family: 'Librefranklin-Bold' !important;
     text-transform: uppercase;
   }
   .points.mobile-p {
