--- a/src/pages/reward-new/index.css
+++ b/src/pages/reward-new/index.css
@@ -139,16 +139,16 @@
   padding-top: 2px;
   margin-bottom: 2px;
   color: #333;
-  font-family: 'Librefranklin-Regular' !important;
+  font-family: 'Librefranklin-Bold' !important;
   text-transform: uppercase;
 }
 #reward-points-container .reward-point-merge-panel .button {
   margin: 0;
   line-height: 20px;
   text-transform: uppercase;
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Librefranklin-Bold' !important;
   color: #0075bf;
-  font-size: 11px;
+  font-size: 13px;
   font-weight: bold;
   cursor: pointer;
 }
