--- a/src/index.css
+++ b/src/index.css
@@ -547,3 +547,6 @@ font-family: 'Sunborn-Sansone' !important;
 .css-1je76wn-MuiFormLabel-root-MuiInputLabel-root {
   font-family: 'Librefranklin-Regular' !important;
 }
+.css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input {
+  margin: 15px 10px 10px 20px !important;
+}
