--- a/src/components/delivery-form/index.css
+++ b/src/components/delivery-form/index.css
@@ -7,5 +7,5 @@
     margin-bottom: 0;
     margin-left: 0px !important;
     display: flex;
-    justify-content: end;
+    /* justify-content: end; */
 }
