--- a/src/pages/category/index.css
+++ b/src/pages/category/index.css
@@ -1,3 +1,3 @@
-.css-1raa5dq-MuiTabs-indicator {
-    background-color: #ffcc38 !important;
+.css-176wgj0-MuiButtonBase-root-MuiTab-root.Mui-selected {
+    color: #062c43;
 }
