mobile design menu & 1101 & 1102

--- a/src/pages/category/index.css
+++ b/src/pages/category/index.css
@@ -1,3 +1,8 @@
 .css-176wgj0-MuiButtonBase-root-MuiTab-root.Mui-selected {
     color: #062c43;
 }
+
+.MuiTabs-indicator.css-1uov2sb-MuiTabs-indicator {
+    background-color: #2b4b62;
+    height: 4px;
+}
