--- a/src/pages/category/index.css
+++ b/src/pages/category/index.css
@@ -1,3 +1,7 @@
-.css-1raa5dq-MuiTabs-indicator {
-    background-color: #ffcc38 !important;
+.css-176wgj0-MuiButtonBase-root-MuiTab-root.Mui-selected {
+  color: #062C43;
+}
+.MuiTabs-indicator.css-1uov2sb-MuiTabs-indicator {
+  background-color: #2B4B62;
+  height: 4px;
 }
