--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -60,6 +60,8 @@
 .payment-form .payment-bar2 {
   /* box-shadow: 0px 0px 4px -1px rgb(0 0 0 / 6%), 0px 0px 5px 0px rgb(0 0 0 / 6%), 0px 0px 10px 0px rgb(0 0 0 / 6%); */
   padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .payment-form .payment-bar fieldset {
   box-shadow: none !important;
