--- a/src/components/payment-info/split-payment/index.css
+++ b/src/components/payment-info/split-payment/index.css
@@ -1,10 +1,17 @@
 
 .css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input {
     display: flex !important;
-}
-.MuiFormControl-root .MuiSelect-select {
+  }
+  .MuiFormControl-root .MuiSelect-select {
     padding: 0px 0px 0px 10px !important
-}
-.css-w4kj74-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
+  }
+  .css-w4kj74-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
     height: 50px;
-}
+  }
+  .visible {
+    display: block;
+  }
+  
+  .hidden {
+    display: none;
+  }
