--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -55,11 +55,11 @@
 
 .payment-form .payment-bar {
   box-shadow: 0px 0px 4px -1px rgb(0 0 0 / 6%), 0px 0px 5px 0px rgb(0 0 0 / 6%), 0px 0px 10px 0px rgb(0 0 0 / 6%);
-  padding-left: 10px;
+  /* padding-left: 10px; */
 }
 .payment-form .payment-bar2 {
   /* box-shadow: 0px 0px 4px -1px rgb(0 0 0 / 6%), 0px 0px 5px 0px rgb(0 0 0 / 6%), 0px 0px 10px 0px rgb(0 0 0 / 6%); */
-  padding-left: 10px;
+  /* padding-left: 10px; */
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -69,8 +69,8 @@
 .payment-form .payment-bar .MuiTextField-root {
   margin-bottom: 0px;
   border-left: 1px solid #e4e4e4;
-  padding-left: 25px;
-  margin-left: 25px;
+  padding-left: 15px;
+  margin-left: 15px;
 }
 .payment-form .payment-bar .MuiTextField-root input {
   padding: 15px 0px !important;
