--- a/src/index.css
+++ b/src/index.css
@@ -472,17 +472,32 @@ font-family: 'Sunborn-Sansone' !important;
   top: 20px;
   margin-left: 10px !important;
   text-align: center;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 10px;
+  padding-bottom: 7px;
   background: #0075BF;
-  border: 2px solid #0075BF;
-  border-radius: 80px;
+  /* border: 2px solid #0075BF;
+  border-radius: 80px; */
   width: 40%;
-  font-size: 10px !important;
-  font-family: 'GritSans-Bold' !important;
+  font-size: 12px !important;
+  font-family: 'Sunborn-Sansone'!important;
   letter-spacing: 0.7px !important;
-}
+}   
 
+.product-label-Mobile {
+  margin: 10px !important;
+  font-weight: 400;
+  line-height: 1.75;
+  letter-spacing: 0.00938em;
+  color: white;
+  position: absolute;
+  left: 0;
+  right: 0;
+  padding: 8px 8px 8px 8px;
+  top: 0px;
+  width: fit-content;
+  background: #0075BF;
+  text-align: left;
+}
 .skip-link {
   position: absolute;
   top: -40px;
