--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -131,7 +131,9 @@ legend.heading-ui.h3 {
   background: white;
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.2);
   margin: auto;
-  width: 140px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  width: 110px;
 }
 
 .product-detail .quantity input,
@@ -144,7 +146,7 @@ legend.heading-ui.h3 {
 
 .product-detail .quantity2 input,
 .product-detail .quantity2 button {
-  height: 40px !important;
+  height: 30px !important;
   /* padding: 0px 5px !important; */
   background: transparent;
   box-shadow: none;
@@ -182,7 +184,7 @@ legend.heading-ui.h3 {
   font-family: 'Librefranklin-Regular' !important;
   font-size: 30px;
   color: #414141;
-  min-width: 49px !important;
+  min-width: 35px !important;
 }
 
 .product-detail .quantity fieldset {
